@@ -1,7 +1,8 @@
 0.1.11:
 
 * totally different memory management regime that eliminates old
-  prediction stuff, and instead relies on trying at 2 GiB, 4 GiB, etc. until failure
+  prediction stuff, and instead relies on trying at 2 GiB, 4 GiB, etc.
+  until failure. globally shares minimum values for each thread
 * temporary: minimum segment length is always at least 10
 * temporarily disabled --split-sequences
 * new prereq: switch from old DRMAA module to new drmaa module
@@ -23,6 +24,9 @@
 * segway: disabled track weighting
 * segway: add --semisupervised=FILE option to get semisupervision
   labels from a BED file
+* segway: add --drm-opt=OPTION option to allow specification of an
+  arbitrary distributed resource manager option (e.g. for SGE -p sets
+  priority, -l sets a resource requirement, etc.)
 
 0.1.10:
 
